base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant
          ports:
            - name: ui
              containerPort: 8123
          volumeMounts:
            - name: home-assistant-data
              mountPath: /config
          resources:
            requests:
              cpu: '2'
              memory: 3Gi
            limits:
              memory: 3Gi
        - name: matter-server
          image: ghcr.io/matter-js/matterjs-server
          ports:
            - containerPort: 5580
          volumeMounts:
            - name: matter-data
              mountPath: /data
          resources:
            requests:
              cpu: '2'
              memory: 3Gi
            limits:
              memory: 3Gi
      volumes:
        - name: home-assistant-data
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - name: matter-data
          persistentVolumeClaim:
            claimName: matter-server-data
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
