base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - port: 8123
      targetPort: ui
      protocol: TCP
      name: http
