base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Open source home automation that puts local control and privacy first.
    gethomepage.dev/group: IoT
    gethomepage.dev/name: Home Assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-http-gateway
      namespace: istio-ingress
  hostnames: []
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ''
          kind: Service
          name: home-assistant
          port: 8123
          weight: 1
